Added addNodo service (preliminar)
